# nc

./: .env.example  .gitignore  README.md  docker-compose.neo4j.yml  pyproject.toml
apps/web/: package-lock.json  package.json  vitest.config.ts
data/curated/: aic_asset_zero_la_grande_jatte.md  aic_discovery_portfolio_v1.json  aic_discovery_portfolio_v1.md  ala_discovery_portfolio_v1.json  ala_discovery_portfolio_v1.md  catalan_atlas_asset_zero_metadata.md  catalan_atlas_metadata.json  cma_asset_zero_cloudy_mountains.md  cma_discovery_portfolio_v1.json  cma_discovery_portfolio_v1.md  dpla_discovery_portfolio_v1.json  flagship_portfolio_v1.json  flagship_portfolio_v1.md  gallica_discovery_portfolio_v1.json  gbif_nature_intelligence_pilot_v1.md  (+39 more)
graph/: __init__.py  seed.py
memory/: project_nc_assets_1000000.md  project_nc_commerce_2000.md  project_nc_institution_002.md
observability/: prometheus.yml
reports/: asset_experience_blueprint.md  canon_narrative.md  global_collection_portfolio.md  masterpiece_activation_portfolio.md  yellowstone_asset_verification_report.md
scripts/: curate_smithsonian_flagship.py  generate_flagship_portfolio.py  generate_loc_opportunity_discovery.py  generate_portfolio_audit.py  generate_standards_matrices.py  load_test_knowledge_worker.py
services/api/: config.py  database.py  dependencies.py  graph_runtime.py  main.py  pyproject.toml
services/api/routers/: assets.py  collections.py  discover.py  discovery.py  graph.py  health.py  io.py  knowledge.py  pilot.py  places.py  products.py  research.py  sources.py  taxa.py
tests/: conftest.py
workers/ingestion_worker/: config.py  fetch.py  main.py  pyproject.toml  store.py  validate.py
(+1113 files in other folders)
